<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_screen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120dp"
            android:background="@drawable/bg_white_sharp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_25dp"
                android:fontFamily="@font/poppins"
                android:text="@string/place"
                android:textColor="@color/phone_code"
                android:textSize="@dimen/sp_16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvPropertyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/that_wonderful_house"
                    android:textColor="#c7556f"
                    android:textSize="@dimen/sp_16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sector_2_hsr_layout"
                    android:textColor="@color/text_hint"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/sp_14sp"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25dp"
            android:layout_marginTop="@dimen/dp_15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/selected_room"
            android:textColor="@color/phone_code" />

        <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginRight="@dimen/dp_20dp"
        android:layout_marginLeft="@dimen/dp_20dp"
        android:layout_marginBottom="@dimen/dp_20dp"
        android:layout_marginTop="@dimen/dp_8dp"
        app:cardCornerRadius="@dimen/dp_8dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:elevation="10dp">

                <ImageView
                    android:id="@+id/ivPropertyImage"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/schedule_banner"
                    android:scaleType="fitXY" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10dp"
                    android:text="@string/private_rooms"
                    android:fontFamily="@font/poppins"
                    android:textColor="#494c4f"
                    android:textSize="@dimen/sp_14sp"
                    android:letterSpacing="0.02"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#9B9B9B"
                    android:text="@string/status"
                    android:fontFamily="@font/poppins"
                    android:textSize="@dimen/sp_12sp" />

                <TextView
                    android:id="@+id/tvAvailability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available"
                    android:textColor="#0ec393"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/price_inr"
                    android:textSize="@dimen/sp_20sp"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_sharp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_move_in"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/sp_14sp"
                android:textColor="@color/phone_code"
                android:layout_marginTop="@dimen/dp_25dp"
                android:layout_marginStart="@dimen/dp_25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:layout_marginStart="@dimen/dp_25dp"
                android:layout_marginTop="@dimen/dp_25dp"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/sp_14sp"
                android:textColor="@color/phone_code" />

            <RelativeLayout
                android:id="@+id/rlDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10dp"
                android:padding="@dimen/dp_10dp"
                android:layout_marginStart="@dimen/dp_25dp"
                android:layout_marginEnd="@dimen/dp_25dp"
                android:background="@drawable/edittext_round_rect">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_10dp"
                    android:text="@string/fri_5_apr_2019"
                    android:textSize="@dimen/sp_14sp"
                    android:fontFamily="@font/poppins"
                    android:textColor="#4a4a4a"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/ivOpenCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_10dp"
                    android:src="@mipmap/date"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_marginStart="@dimen/dp_25dp"
                android:layout_marginTop="@dimen/dp_25dp"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/sp_14sp"
                android:textColor="@color/phone_code" />

            <RelativeLayout
                android:id="@+id/rlTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10dp"
                android:padding="@dimen/dp_10dp"
                android:layout_marginStart="@dimen/dp_25dp"
                android:layout_marginEnd="@dimen/dp_25dp"
                android:background="@drawable/edittext_round_rect">

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_10dp"
                    android:text="@string/_11_30_am"
                    android:textSize="@dimen/sp_14sp"
                    android:fontFamily="@font/poppins"
                    android:textColor="#4a4a4a"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/ivOpenTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_10dp"
                    android:src="@mipmap/time"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_25dp"
                    android:layout_marginEnd="@dimen/dp_25dp"
                    android:layout_marginTop="@dimen/dp_50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/room_rent"
                        android:textColor="#b4b4b4"
                        android:textSize="@dimen/sp_14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/_16500"
                        android:textColor="#b4b4b4"
                        android:textSize="@dimen/sp_14sp"
                        android:fontFamily="@font/poppins"
                        android:layout_gravity="center"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_25dp"
                    android:layout_marginEnd="@dimen/dp_25dp"
                    android:layout_marginTop="@dimen/dp_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/deposit"
                        android:textColor="#b4b4b4"
                        android:textSize="@dimen/sp_14sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/_10000"
                        android:textColor="#b4b4b4"
                        android:textSize="@dimen/sp_14sp"
                        android:fontFamily="@font/poppins"
                        android:layout_gravity="center"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_25dp"
                    android:layout_marginEnd="@dimen/dp_25dp"
                    android:layout_marginTop="@dimen/dp_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/total_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_18sp"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/_26_500"
                        android:textSize="@dimen/sp_20sp"
                        android:fontFamily="@font/poppins"
                        android:layout_gravity="center"/>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50dp"
                android:layout_marginTop="@dimen/dp_20dp"
                android:layout_marginBottom="@dimen/dp_2dp"
                android:text="@string/pay_amp_book"
                android:textSize="@dimen/sp_18sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/button_gradient_test"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>